# EntraScout

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  railway.json  render.yaml
docs/: api.md  architecture.md  attack-chains.md  cli-reference.md  contributing.md  deployment.md  index.md  phases.md  quickstart.md  recipes.md  web-app.md
entrascout/: __init__.py  cli.py  dns_client.py  http_client.py  logging.py  models.py  output.py  report.py  runner.py
entrascout/chain/: __init__.py  pathfinder.py
entrascout/checks/: __init__.py  _helpers.py  aad_apps.py  ado_deep.py  auth_surface.py  authenticated.py  azure_compute_extras.py  azure_data_extras.py  azure_data_services.py  azure_network_extras.py  azure_resources.py  azure_subdomain_enum.py  bing_dorks.py  blob_deep.py  breach_intel.py  cert_san.py  copilot.py  cross_saas.py  dark_corners.py  defender_posture.py  defense_posture.py  dns_intel.py  dns_surface.py  dynamics_deep.py  entra_advanced.py  federation.py  final_gaps.py  functions_unauth.py  github_dorks.py  guest_inference.py  http_headers.py  identity_edges.py  internal_mode.py  intune.py  logic_apps.py  m365_services.py  mfa_gaps.py  microsoft_endpoint.py  ms_public_content.py  oauth.py  (+15 more)
entrascout/templates/: exec_summary.html.j2  report.html.j2
entrascout/web/: __init__.py  api.py  main.py  runner_wrapper.py  schemas.py  store.py  streamer.py
entrascout/web/static/: index.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AttackGraph.tsx  CommandBar.tsx  ConsoleLayout.tsx  DynamicGrid.tsx  FindingCard.tsx  Layout.tsx  ScanForm.tsx  (+3 more)
tests/: test_smoke.py
tools/: blobexplorer.py  blobweb.py
(+18 files in other folders)
